[ch15409] fix social buttons alignment

--- a/packages/portal-style/src/pages/_kb-article.scss
+++ b/packages/portal-style/src/pages/_kb-article.scss
@@ -214,7 +214,6 @@
 .dp-po-social-login {
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
 
   .btn {
     margin-bottom: 20px;
